<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.azaatar.eventguard</groupId>
        <artifactId>eventguard-parent</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>eventguard-runner</artifactId>

    <dependencies>
        <dependency>
            <groupId>com.azaatar.eventguard</groupId>
            <artifactId>eventguard-core</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.azaatar.eventguard</groupId>
            <artifactId>eventguard-file</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.azaatar.eventguard</groupId>
            <artifactId>eventguard-csv</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.azaatar.eventguard</groupId>
            <artifactId>eventguard-application</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
